--- a/resources/js/components/Footer.css
+++ b/resources/js/components/Footer.css
@@ -1,10 +1,10 @@
 .main-footer{
     text-align: center;
-    font-family: monospace;
+    font-family: Sans-serif, Verdana;
     color: #334c52;
-    background-color: #76a5b0;
+    background-color: #B7C1C8;
     width: 100%;
+    height: 3.5%;
     position:fixed;
-    padding-bottom: 0;
     bottom:0;
 }
